5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1577_1328.log
== SUBMITION (2019-03-14 19:32:02) 
-- CODE:
print(20x35)
-- EXECUTION TIME:
0.17768
-- ERROR:
  File "/home/codebench/codes/1577/1328/main.py", line 1
    print(20x35)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:32:24) 
-- CODE:
print(20*35)
-- EXECUTION TIME:
0.142929
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
